chore: eslint rules

--- a/packages/taro-vant-ui/src/style/variables/defalut.less
+++ b/packages/taro-vant-ui/src/style/variables/defalut.less
@@ -400,6 +400,14 @@
 @rate-icon-disabled-color: @gray-5;
 @rate-icon-gutter: @padding-base;
 
+// Swipe
+@swipe-indicator-size: 12px;
+@swipe-indicator-margin: @padding-sm;
+@swipe-indicator-active-opacity: 1;
+@swipe-indicator-inactive-opacity: 0.3;
+@swipe-indicator-active-background-color: @blue;
+@swipe-indicator-inactive-background-color: @border-color;
+
 // Switch
 @switch-width: 2em;
 @switch-height: 1em;
